使用 Colaboratory 创建

--- a/notebooks/W02. Pandas.ipynb
+++ b/notebooks/W02. Pandas.ipynb
@@ -1203,11 +1203,11 @@
         "income[['Single adult','Childless couple, annual income']].loc[1]"
       ],
       "metadata": {
-        "id": "dRmX_iZmhkYx",
-        "outputId": "6a867300-faae-4fd3-d663-52a3210be0af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dRmX_iZmhkYx",
+        "outputId": "6a867300-faae-4fd3-d663-52a3210be0af"
       },
       "execution_count": 119,
       "outputs": [
@@ -1231,11 +1231,11 @@
         "income[['Single adult','Childless couple, annual income']].loc[50]"
       ],
       "metadata": {
-        "id": "UVdtcnuGh3BN",
-        "outputId": "5799b3fd-f33d-4768-803e-21b6b79716e1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UVdtcnuGh3BN",
+        "outputId": "5799b3fd-f33d-4768-803e-21b6b79716e1"
       },
       "execution_count": 120,
       "outputs": [
@@ -1259,11 +1259,11 @@
         "income[['Single adult','Childless couple, annual income']].loc[99]"
       ],
       "metadata": {
-        "id": "PJ7E3OhIh6O5",
-        "outputId": "e3ea6959-6658-4996-df2f-22d2d4f61bc8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PJ7E3OhIh6O5",
+        "outputId": "e3ea6959-6658-4996-df2f-22d2d4f61bc8"
       },
       "execution_count": 121,
       "outputs": [
@@ -1373,11 +1373,11 @@
         "print(mean)"
       ],
       "metadata": {
-        "id": "9Tqh5qGMh-HL",
-        "outputId": "4d5a58cf-cf75-40a8-d3da-1426a73e58e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9Tqh5qGMh-HL",
+        "outputId": "4d5a58cf-cf75-40a8-d3da-1426a73e58e4"
       },
       "execution_count": 123,
       "outputs": [
@@ -1397,11 +1397,11 @@
         "print(median)"
       ],
       "metadata": {
-        "id": "qZmQP90PiMOB",
-        "outputId": "c0f34532-c044-4c5c-a65e-0a85f7ff9446",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qZmQP90PiMOB",
+        "outputId": "c0f34532-c044-4c5c-a65e-0a85f7ff9446"
       },
       "execution_count": 124,
       "outputs": [
@@ -1426,12 +1426,12 @@
         "plt.axhline(median, color=\"y\", label = 'median')"
       ],
       "metadata": {
-        "id": "YQrvQckTiVVd",
-        "outputId": "02f5790d-8d6b-473b-ca0e-f53a931140b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 740
-        }
+        },
+        "id": "YQrvQckTiVVd",
+        "outputId": "02f5790d-8d6b-473b-ca0e-f53a931140b1"
       },
       "execution_count": 126,
       "outputs": [
@@ -1868,11 +1868,11 @@
       "execution_count": 132,
       "metadata": {
         "id": "hGlvHC7iOgl5",
-        "outputId": "8750ace7-7a1a-4dde-901c-4e977babbaba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 740
-        }
+        },
+        "outputId": "8750ace7-7a1a-4dde-901c-4e977babbaba"
       },
       "outputs": [
         {
@@ -2015,11 +2015,11 @@
       "execution_count": 133,
       "metadata": {
         "id": "Bg_cvi27OgmE",
-        "outputId": "521f6ce2-98b1-4d36-e2f8-2ab73f471a4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 740
-        }
+        },
+        "outputId": "521f6ce2-98b1-4d36-e2f8-2ab73f471a4a"
       },
       "outputs": [
         {
@@ -2217,6 +2217,24 @@
         "\n",
         "Using the following URL https://en.wikipedia.org/wiki/List_of_Nobel_laureates_in_Chemistry create a plot of the top 10 countries in terms of nobel laureates. First, follow the steps below:"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url='https://en.wikipedia.org/wiki/List_of_Nobel_laureates_in_Chemistry'\n",
+        "\n",
+        "tables=pandas.read_html(url)\n",
+        "\n",
+        "chem=tables[0]\n",
+        "chem\n",
+        "\n",
+        "countries=chem.groupby('Country[B]').size()\n"
+      ],
+      "metadata": {
+        "id": "_unuI_relG_J"
+      },
+      "execution_count": 136,
+      "outputs": []
     },
     {
       "cell_type": "code",
