使用 Colaboratory 创建

--- a/notebooks/W03. Spatial Data.ipynb
+++ b/notebooks/W03. Spatial Data.ipynb
@@ -81,7 +81,7 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
+        "import pandas as pd #给它起个名字\n",
         "import matplotlib\n",
         "import matplotlib.pyplot as plt\n",
         "import numpy as np\n",
@@ -89,7 +89,7 @@
         "from datetime import datetime\n",
         "\n",
         "%matplotlib inline\n",
-        "pylab.rcParams['figure.figsize'] = (10, 8)"
+        "pylab.rcParams['figure.figsize'] = (10, 8) #figure dimension"
       ]
     },
     {
@@ -125,9 +125,9 @@
         }
       ],
       "source": [
-        "!mkdir data\n",
-        "!mkdir data/wk3\n",
-        "!curl https://qm2.s3.eu-west-2.amazonaws.com/wk3/california_aqi.csv -o ./data/wk3/california_aqi.csv"
+        "!mkdir data #create directory\n",
+        "!mkdir data/wk3 #create file name wk3\n",
+        "!curl https://qm2.s3.eu-west-2.amazonaws.com/wk3/california_aqi.csv -o ./data/wk3/california_aqi.csv #download the file from the link and save it in the file"
       ]
     },
     {
@@ -692,10 +692,10 @@
       "execution_count": 18,
       "metadata": {
         "id": "JA1ATGEsf8QF",
-        "outputId": "cb4892ec-1c1a-4327-92be-068f8ce72f2a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cb4892ec-1c1a-4327-92be-068f8ce72f2a"
       },
       "outputs": [
         {
