使用 Colaboratory 创建

--- a/notebooks/W03. Spatial Data.ipynb
+++ b/notebooks/W03. Spatial Data.ipynb
@@ -579,7 +579,7 @@
         }
       ],
       "source": [
-        "df=pd.read_csv('data/wk3/california_aqi.csv')\n",
+        "df=pd.read_csv('data/wk3/california_aqi.csv') #create a variable call df  pad.read_csv-->read the csv file in the folder\n",
         "df"
       ]
     },
@@ -617,7 +617,7 @@
         }
       ],
       "source": [
-        "print('Prior to cleaning, the data type of the \"Date\" column is:', df['Date'].dtype)\n",
+        "print('Prior to cleaning, the data type of the \"Date\" column is:', df['Date'].dtype) # []---the column of the data frame, it meant tell me the datatype of the column\n",
         "\n",
         "df['Date']=pd.to_datetime(df['Date'])\n",
         "\n",
