--- a/notebooks/W03. Spatial Data.ipynb
+++ b/notebooks/W03. Spatial Data.ipynb
@@ -619,7 +619,7 @@
       "source": [
         "print('Prior to cleaning, the data type of the \"Date\" column is:', df['Date'].dtype) # []---the column of the data frame, it meant tell me the datatype of the column\n",
         "\n",
-        "df['Date']=pd.to_datetime(df['Date'])\n",
+        "df['Date']=pd.to_datetime(df['Date']) #change object type into datatime type\n",
         "\n",
         "print('Now, it is stored as: ', df['Date'].dtype)"
       ]
@@ -689,39 +689,47 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 20,
       "metadata": {
         "id": "JA1ATGEsf8QF",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cb4892ec-1c1a-4327-92be-068f8ce72f2a"
+        "outputId": "b3770355-b17c-4268-8721-8e1dbfe5ae03"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "            Date  Month  Day week\n",
-            "0     2020-01-01      1    1   00\n",
-            "1     2020-01-02      1    2   00\n",
-            "2     2020-01-03      1    3   00\n",
-            "3     2020-01-04      1    4   00\n",
-            "4     2020-01-05      1    5   00\n",
-            "...          ...    ...  ...  ...\n",
-            "55686 2020-11-29     11  334   47\n",
-            "55687 2020-12-18     12  353   50\n",
-            "55688 2020-12-20     12  355   50\n",
-            "55689 2020-12-23     12  358   51\n",
-            "55690 2020-12-29     12  364   52\n",
+            "            Date  Month  Day  week\n",
+            "0     2020-01-01      1    1     1\n",
+            "1     2020-01-02      1    2     1\n",
+            "2     2020-01-03      1    3     1\n",
+            "3     2020-01-04      1    4     1\n",
+            "4     2020-01-05      1    5     1\n",
+            "...          ...    ...  ...   ...\n",
+            "55686 2020-11-29     11  334    48\n",
+            "55687 2020-12-18     12  353    51\n",
+            "55688 2020-12-20     12  355    51\n",
+            "55689 2020-12-23     12  358    52\n",
+            "55690 2020-12-29     12  364    53\n",
             "\n",
             "[55691 rows x 4 columns]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-20-18648d2c95cf>:1: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated. Please use Series.dt.isocalendar().week instead.\n",
+            "  df['week']=df['Date'].dt.week\n"
           ]
         }
       ],
       "source": [
-        "df['week']=df['Date'].dt.strftime('%W')\n",
-        "print(df[['Date','Month','Day','week']])"
+        "df['week']=df['Date'].dt.week\n",
+        "print(df[['Date','Month','Day','week']]) #in the new version, python might cancel this function"
       ]
     },
     {
