使用 Colaboratory 创建

--- a/notebooks/W08. Linear Regression.ipynb
+++ b/notebooks/W08. Linear Regression.ipynb
@@ -1774,11 +1774,11 @@
         "print(model1.summary())"
       ],
       "metadata": {
-        "id": "YG6Skb8G5wOM",
-        "outputId": "dc3e8adf-b798-4226-d9da-40dd7c5d6b64",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YG6Skb8G5wOM",
+        "outputId": "dc3e8adf-b798-4226-d9da-40dd7c5d6b64"
       },
       "execution_count": 33,
       "outputs": [
@@ -1943,11 +1943,11 @@
     {
       "cell_type": "code",
       "source": [
-        "Consruction = ols('realhrwage ~  sch + age + C(sex)', data=reg_df[reg_df['Consruction']='Consruction, Extraction, Installation']).fit()  # fit a model to california-- i'm filtering the data using the FIPS code for california, which is 6\n",
-        "Managers = ols('realhrwage ~  sch + age + C(sex)', data=reg_df[reg_df['Managers']=]).fit()  # same thing for mississippi (FIPS code 28)\n",
-        "Transportation = ols('realhrwage ~  sch + age + C(sex)', data=reg_df[reg_df['Transportation and materials moving']]).fit()\n",
+        "Consruction = ols('realhrwage ~  sch + age + C(sex)', data=reg_df[reg_df['occupation']=='Consruction, Extraction, Installation']).fit()  # fit a model to california-- i'm filtering the data using the FIPS code for california, which is 6\n",
+        "Managers = ols('realhrwage ~  sch + age + C(sex)', data=reg_df[reg_df['occupation']=='Managers']).fit()  # same thing for mississippi (FIPS code 28)\n",
+        "Transportation = ols('realhrwage ~  sch + age + C(sex)', data=reg_df[reg_df['occupation']=='Transportation and materials moving']).fit()\n",
         "table=summary_col( # create a regression table\n",
-        "    [california,mississippi], # pass the models to the summary_col function\n",
+        "    [Consruction,Managers,Transportation], # pass the models to the summary_col function\n",
         "    stars=True, # add stars denoting the p-values of the coefficient to the table; * p<0.05, ** p<0.01, *** p<0.001\n",
         "    float_format='%0.3f', # set the decimal places to 3\n",
         "    model_names=['Consruction','Managers','Transportation'], # set the name of the model\n",
@@ -1956,34 +1956,36 @@
         "print(table)"
       ],
       "metadata": {
-        "id": "bqdXQVgCGnXh",
-        "outputId": "bc829585-41f0-425e-c134-1ce548263bee",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 507
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bqdXQVgCGnXh",
+        "outputId": "52a13346-7350-4de7-c58f-24f4f237b494"
       },
-      "execution_count": 37,
+      "execution_count": 43,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3802\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'Consruction, Extraction, Installation'",
-            "\nThe above exception was the direct cause of the following exception:\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-37-76c4f3bfa6cd>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mConsruction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'realhrwage ~  sch + age + C(sex)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreg_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mreg_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Consruction, Extraction, Installation'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# fit a model to california-- i'm filtering the data using the FIPS code for california, which is 6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mManagers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'realhrwage ~  sch + age + C(sex)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreg_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mreg_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Managers'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# same thing for mississippi (FIPS code 28)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mTransportation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mols\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'realhrwage ~  sch + age + C(sex)'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreg_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mreg_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Transportation and materials moving'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m table=summary_col( # create a regression table \n\u001b[1;32m      5\u001b[0m     \u001b[0;34m[\u001b[0m\u001b[0mcalifornia\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmississippi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m# pass the models to the summary_col function\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3807\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3808\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3809\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3803\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3804\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3805\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3806\u001b[0m                 \u001b[0;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'Consruction, Extraction, Installation'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "====================================================\n",
+            "               Consruction  Managers  Transportation\n",
+            "----------------------------------------------------\n",
+            "Intercept      0.135       -20.866*** 4.591***      \n",
+            "               (0.992)     (1.511)    (1.062)       \n",
+            "C(sex)[T.2]    -3.685***   -5.529***  -4.422***     \n",
+            "               (0.901)     (0.369)    (0.411)       \n",
+            "sch            1.202***    2.705***   0.757***      \n",
+            "               (0.064)     (0.083)    (0.068)       \n",
+            "age            0.149***    0.289***   0.086***      \n",
+            "               (0.015)     (0.019)    (0.015)       \n",
+            "R-squared      0.097       0.220      0.080         \n",
+            "R-squared Adj. 0.097       0.220      0.079         \n",
+            "N              4441        5494       3163          \n",
+            "====================================================\n",
+            "Standard errors in parentheses.\n",
+            "* p<.1, ** p<.05, ***p<.01\n"
           ]
         }
       ]
