使用 Colaboratory 创建

--- a/notebooks/W08. Linear Regression.ipynb
+++ b/notebooks/W08. Linear Regression.ipynb
@@ -2315,7 +2315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "VH6czU3QuQGQ"
       },
@@ -2338,12 +2338,65 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "id": "V4fSj8a4uQGQ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V4fSj8a4uQGQ",
+        "outputId": "3a3d1358-bf5d-4a6f-cfb9-42fe5a5a9e99"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                            OLS Regression Results                            \n",
+            "==============================================================================\n",
+            "Dep. Variable:             realhrwage   R-squared:                       0.195\n",
+            "Model:                            OLS   Adj. R-squared:                  0.195\n",
+            "Method:                 Least Squares   F-statistic:                     4266.\n",
+            "Date:                Fri, 01 Dec 2023   Prob (F-statistic):               0.00\n",
+            "Time:                        16:15:31   Log-Likelihood:            -2.0420e+05\n",
+            "No. Observations:               52720   AIC:                         4.084e+05\n",
+            "Df Residuals:                   52716   BIC:                         4.084e+05\n",
+            "Df Model:                           3                                         \n",
+            "Covariance Type:            nonrobust                                         \n",
+            "===================================================================================\n",
+            "                      coef    std err          t      P>|t|      [0.025      0.975]\n",
+            "-----------------------------------------------------------------------------------\n",
+            "Intercept          12.3625      0.195     63.559      0.000      11.981      12.744\n",
+            "C(degrees)[T.1]     5.7987      0.206     28.158      0.000       5.395       6.202\n",
+            "C(degrees)[T.2]    13.7621      0.220     62.414      0.000      13.330      14.194\n",
+            "C(degrees)[T.3]    20.0779      0.239     83.940      0.000      19.609      20.547\n",
+            "==============================================================================\n",
+            "Omnibus:                     9697.064   Durbin-Watson:                   1.905\n",
+            "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            18647.819\n",
+            "Skew:                           1.133   Prob(JB):                         0.00\n",
+            "Kurtosis:                       4.832   Cond. No.                         9.43\n",
+            "==============================================================================\n",
+            "\n",
+            "Notes:\n",
+            "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+          ]
+        }
+      ],
+      "source": [
+        "reg_df['degrees']=np.where(reg_df['sch']>=18, 3, reg_df['degrees'])\n",
+        "model2 = ols('realhrwage ~  C(degrees)', data=reg_df).fit()\n",
+        "print(model2.summary())\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Compares to someone with no highschool degree, someone with an advanced degree earn 20.1 more per hour"
+      ],
+      "metadata": {
+        "id": "Bu8yYkPCKgkF"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
