使用 Colaboratory 创建

--- a/notebooks/W07. Hypothesis Testing.ipynb
+++ b/notebooks/W07. Hypothesis Testing.ipynb
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "YgIBGERVqYGy",
         "outputId": "62286e84-e7b6-4287-f8c9-153a35259c41",
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "butQHvOgqYGz"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "54pMm1ubqYG0",
         "outputId": "e2d2eab1-4190-468a-c9cb-323d0279d790",
@@ -516,7 +516,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "gDZ_NG-QqYG0",
         "outputId": "0b9a9c60-1898-444f-a1b0-c418fab4c30d",
@@ -564,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "OpmJiV42qYG1",
         "outputId": "5642e59a-85e8-49ff-d219-4e33b69c675b",
@@ -605,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "HJocVWckqYG1",
         "outputId": "25f9b13a-b0d9-428b-aca6-36f9953fe8d4",
@@ -648,7 +648,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "3eeVtfgjqYG2",
         "outputId": "f1d4628a-2483-406c-a0b1-72fadf409a09",
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "vdQEBGcrqYG2",
         "outputId": "6b1bb489-38a7-49dc-85c3-eb1ab97c1c57",
@@ -775,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "R5sKESLOqYG3",
         "outputId": "179991c2-fb9d-48f8-ce4a-12ac26a5e717",
@@ -843,7 +843,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "9GofilufqYG3"
       },
@@ -896,7 +896,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "1qZTc8BUqYG3",
         "outputId": "5b5b526e-3650-4066-833b-7058db0d6a21",
@@ -935,7 +935,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "WWrvV5HpqYG4",
         "outputId": "31c44705-dbee-4606-d4e3-9ba99b9aeced",
@@ -977,7 +977,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "Ap39cJ7eqYG4",
         "outputId": "b0ce21da-83ee-4d60-f888-dd9d41e8e66c",
@@ -1032,7 +1032,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1072,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "P4QKCwL9qYG4",
         "outputId": "207487b0-bc69-4dbd-c802-f4d7fb850a0f",
@@ -1097,7 +1097,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "E5LrmFU-qYG4",
         "outputId": "01daaa1d-67ac-4cab-bd1b-c6c11ba77175",
@@ -1162,7 +1162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "tk3MeUgHqYG5",
         "outputId": "a6551aa3-2480-4ffc-d8da-354035526b40",
@@ -1194,7 +1194,8 @@
       ],
       "source": [
         "t2 = manual_ttest(tweets[tweets['hour']<tweet]['count'],tweets[tweets['hour']>tweet]['count'])\n",
-        "plot_z(t2)"
+        "plot_z(t2)\n",
+        "# statistic significant because the t value is not within the 95% confidence, so reject the null hypothesis"
       ]
     }
   ],
